--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <form id="form">
             <input type="text" id="id" placeholder="群号（作为验证用）">
             <input type="text" id="nickname" placeholder="昵称">
-            <textarea id="content" placeholder="内容（支持 ![](url) 格式的网络图片，一次最多发送一张）" rows="6"></textarea>
+            <textarea id="content" placeholder="内容（支持 ![](url) 格式的网络图片，出于性能考虑建议一次最多发送一张）" rows="6"></textarea>
             <button type="submit">提交</button>
             <div id="result"></div>
         </form>
