--- a/index.html
+++ b/index.html
@@ -116,7 +116,8 @@
 
         @media screen and (max-width: 450px) {
             .container {
-                padding: 1em 0 0 0;
+                padding-top: 1em;
+                margin-top: 1em;
             }
         }
     </style>
