--- a/index.html
+++ b/index.html
@@ -116,6 +116,7 @@
 
         @media screen and (max-width: 450px) {
             .container {
+                padding: 0;
                 padding-top: 1em;
                 margin-top: 1em;
             }
