docs(style): add github link

--- a/asset/index.html
+++ b/asset/index.html
@@ -138,7 +138,7 @@
             <img src="mahiro.png" alt="mahiro" class="charaImg">
             <h3 class="charaNameWrap">
                 <span class="charaName">緒山まひろ</span>
-                <span class="botSpan">Bot</span>
+                <a class="botSpan" href="https://github.com/liuly0322/QQAutoGUISender" target="_blank">Bot</a>
             </h3>
         </div>
         <form id="form">
