--- a/asset/index.html
+++ b/asset/index.html
@@ -65,6 +65,7 @@
             border: 1px solid #ccc;
             border-radius: 5px;
             box-shadow: 0 0 0px 1000px white inset;
+            outline-style: none;
         }
 
         button {
