feat(style): add border color transition for text

--- a/asset/index.html
+++ b/asset/index.html
@@ -66,6 +66,12 @@
             border-radius: 5px;
             box-shadow: 0 0 0px 1000px white inset;
             outline-style: none;
+            transition: border-color 0.3s ease;
+        }
+
+        textarea:focus,
+        input[type="text"]:focus {
+            border: 1px solid #5bc0de;
         }
 
         button {
