--- a/asset/index.html
+++ b/asset/index.html
@@ -157,7 +157,7 @@
         <form id="form">
             <input type="text" id="id" placeholder="群号（作为验证用）">
             <input type="text" id="nickname" placeholder="昵称">
-            <textarea id="content" placeholder="内容（支持 ![](url) 格式的网络图片，出于性能考虑建议一次最多发送一张；支持使用 > {user}\n 来回复某个匿名用户的最近发言）"
+            <textarea id="content" placeholder="内容（支持 ![](url) 格式的网络图片，出于性能考虑建议一次最多发送一张；支持使用 > {user}\n 来回复某个匿名用户的最近发言）；支持 @qq 号来提及群友"
                 rows="6"></textarea>
             <button type="submit">发送！</button>
             <div id="result"></div>
