feat: password -> whitelist groups

--- a/asset/index.html
+++ b/asset/index.html
@@ -248,7 +248,7 @@
             }
 
             resultElement.innerText = '正在发送...';
-            fetch('/bot/send', {
+            fetch('send', {
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/json'
