docs: group switch

--- a/asset/index.html
+++ b/asset/index.html
@@ -189,7 +189,7 @@
             </h3>
         </div>
         <form id="form">
-            <input type="text" id="id" placeholder="群号（作为验证用）">
+            <input type="text" id="id" placeholder="群号">
             <input type="text" id="nickname" placeholder="昵称">
             <textarea id="content" placeholder="内容" rows="6"></textarea>
             <details class="close">
