style: divide html into html and css

--- a/asset/index.html
+++ b/asset/index.html
@@ -5,182 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>緒山まひろBot</title>
-    <style>
-        @font-face {
-            font-family: 'M PLUS Rounded 1c';
-            font-style: normal;
-            font-weight: 800;
-            font-display: swap;
-            src: url('font.ttf') format('truetype');
-        }
-
-        html {
-            background: url('background.jpg');
-            background-size: 1500px 1046px;
-        }
-
-        body {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            margin: 4px 0;
-        }
-
-        .container {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            padding: 2em;
-            border: 4px solid #ee858c;
-            background-color: #fff899;
-            border-radius: 20px;
-            box-sizing: border-box;
-            max-width: 1200px;
-        }
-
-        h1 {
-            text-align: center;
-            color: #333;
-            margin-bottom: 20px;
-        }
-
-        form {
-            display: flex;
-            flex-direction: column;
-            width: 300px;
-            background-color: #fff;
-            padding: 20px;
-            border-radius: 20px;
-            box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-        }
-
-        textarea {
-            resize: none;
-        }
-
-        textarea,
-        details,
-        input[type="text"] {
-            margin: 10px 0;
-            padding: 10px;
-            border: 1px solid #ccc;
-            border-radius: 5px;
-            box-shadow: 0 0 0px 1000px white inset;
-            outline-style: none;
-            transition: all 0.3s ease;
-        }
-
-        input:invalid {
-            border-color: #ee858c;
-        }
-
-        textarea:focus,
-        input[type="text"]:focus {
-            border: 1px solid #5bc0de;
-        }
-
-        button {
-            margin-top: 10px;
-            padding: 10px;
-            background-color: #66afe9;
-            color: #fff;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-            transition: background-color 0.3s ease;
-        }
-
-        button:hover {
-            background-color: #5bc0de;
-        }
-
-        button:disabled {
-            background-color: #ccc;
-            cursor: not-allowed;
-        }
-
-        #result {
-            margin-top: 10px;
-            color: #555;
-            font-style: italic;
-        }
-
-        .botTitle {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-        }
-
-        .charaImg {
-            width: 50%;
-        }
-
-        .charaNameWrap {
-            display: flex;
-            align-items: flex-end;
-            line-height: 1;
-            font-weight: 800;
-            font-family: YakuHanRP, 'M PLUS Rounded 1c', "Yu Gothic", YuGothic, "Hiragino Kaku Gothic ProN", "メイリオ", Meiryo, sans-serif;
-            margin-bottom: 40px;
-        }
-
-        .charaName {
-            font-size: 44px;
-            line-height: 1;
-            color: #ee858c;
-            display: inline-block;
-        }
-
-        .botSpan {
-            font-size: 24px;
-            color: #45bbff;
-            display: inline-block;
-            padding-left: 12px;
-            line-height: 1.1;
-        }
-
-        details {
-            font-size: 14px;
-            color: #666;
-            font-weight: 400;
-        }
-
-        details summary {
-            cursor: pointer;
-        }
-
-        details ul {
-            padding-left: 20px;
-        }
-
-        details ul li {
-            margin-bottom: 10px;
-            opacity: 1;
-            max-height: 50px;
-            transition: all 0.3s linear;
-        }
-
-        details.close ul li {
-            margin-bottom: 0;
-            opacity: 0;
-            max-height: 0;
-        }
-
-        .code {
-            font-family: monospace;
-            background-color: #f8f9fa;
-            padding: 2px 4px;
-            border-radius: 4px;
-        }
-
-        @media screen and (max-width: 450px) {
-            .container {
-                padding: 0;
-                padding-top: 1em;
-                margin-top: 1em;
-            }
-        }
-    </style>
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
